tests/rustdoc-ui/synthetic-auto-trait-impls/unconstrained-param-in-impl-ambiguity.stderr
error[E0207]: the type parameter `Q` is not constrained by the impl trait, self type, or predicates
  --> $DIR/unconstrained-param-in-impl-ambiguity.rs:7:13
   |
LL | unsafe impl<Q: Trait> Send for Inner {}
   |             ^ unconstrained type parameter
   |
help: either remove the unused type parameter `Q`, or make use of it
   |
LL - unsafe impl<Q: Trait> Send for Inner {}
LL + unsafe impl Send for Inner {}
   |
LL | unsafe impl<Q: Trait> Send for Inner<Q> {}
   |                                     +++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0207`.
